InternexDev_Sandbox/src/objects/DBA_Name__c.object
<CustomObject>
    <fields>
        <fullName>Client_Portal_ID__c</fullName>
        <formula>Debtor__r.Client_Account__r.Client__r.Portal_External_Id__c</formula>
        <label>Client Portal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA_Name__c</fullName>
        <formula>TRIM(UPPER(Name))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DBA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debtor_Portal_ID__c</fullName>
        <formula>Debtor__r.Portal_External_Id__c</formula>
        <label>Debtor Portal ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debtor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Debtor</label>
        <referenceTo>Debtor__c</referenceTo>
        <relationshipLabel>DBA Names</relationshipLabel>
        <relationshipName>DBA_Names</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grade_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Grade External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Portal_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Portal External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DBA Name</label>
    <nameField>
        <label>DBA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBA Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>